video-07-gpu-inference-ollama/ollama-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ai
spec:
  ports:
    - port: 11434
      targetPort: 11434
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ollama
  namespace: ai
  labels:
    kubernetes.io/service-name: ollama
addressType: IPv4
ports:
  - port: 11434
    protocol: TCP
endpoints:
  - addresses:
    - 10.51.50.13
